--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <meta name="keywords" content="HTML, CSS, JavaScript" />
   <meta name="author" content="DJOK" />
   <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-<link rel="shortcut icon" href="" type="image/x-icon" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
-<link rel="stylesheet" type="text/css" href="./css/style.css" />
-<title>Landing Page One</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <link rel="shortcut icon" href="" type="image/x-icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <title>Landing Page One</title>
 
 </head>
 
